{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 217,
  "lineage": "0803e2d3-b492-efbd-65a7-a5e7294d3f03",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:554075240710:loadbalancer/app/applicationloadbalancer-dev/0d8f829d3802fcbc",
            "arn_suffix": "app/applicationloadbalancer-dev/0d8f829d3802fcbc",
            "dns_name": "applicationloadbalancer-dev-687238775.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:554075240710:loadbalancer/app/applicationloadbalancer-dev/0d8f829d3802fcbc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "applicationloadbalancer-dev",
            "security_groups": [
              "sg-047c3257e69c90ae4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09207e20f5dcc6d4d"
              },
              {
                "subnet_id": "subnet-0ad5e429e0866b626"
              }
            ],
            "subnets": [
              "subnet-09207e20f5dcc6d4d",
              "subnet-0ad5e429e0866b626"
            ],
            "vpc_id": "vpc-065a94f89c12d5e5b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.myvpc.aws_security_group.main",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:554075240710:listener/app/applicationloadbalancer-dev/0d8f829d3802fcbc/cff10d717ddcf179",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:554075240710:targetgroup/applicationtargetgroup-dev/751fbb3571f19f02",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:554075240710:listener/app/applicationloadbalancer-dev/0d8f829d3802fcbc/cff10d717ddcf179",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:554075240710:loadbalancer/app/applicationloadbalancer-dev/0d8f829d3802fcbc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.loadbalancer.aws_alb.main",
            "module.loadbalancer.aws_alb_target_group.mainapp",
            "module.myvpc.aws_security_group.main",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "mainapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:554075240710:targetgroup/applicationtargetgroup-dev/751fbb3571f19f02",
            "arn_suffix": "targetgroup/applicationtargetgroup-dev/751fbb3571f19f02",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:554075240710:targetgroup/applicationtargetgroup-dev/751fbb3571f19f02",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "applicationtargetgroup-dev",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fc537deb0fc02439",
            "public_dns": "ec2-34-198-238-10.compute-1.amazonaws.com",
            "public_ip": "34.198.238.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name ": "natgateway-dev-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-049b1242ccd01d376",
            "public_dns": "ec2-3-92-170-168.compute-1.amazonaws.com",
            "public_ip": "3.92.170.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name ": "natgateway-dev-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elbtest",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:554075240710:loadbalancer/classicloadbalaner-dev",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "classicloadbalaner-dev-1704942297.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "classicloadbalaner-dev",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "classicloadbalaner-dev",
            "security_groups": [
              "sg-047c3257e69c90ae4"
            ],
            "source_security_group": "554075240710/main-dev",
            "source_security_group_id": "sg-047c3257e69c90ae4",
            "subnets": [
              "subnet-09207e20f5dcc6d4d",
              "subnet-0ad5e429e0866b626"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.myvpc.aws_security_group.main",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devgateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04dab6eae1681c1fc",
            "owner_id": "554075240710",
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "devinternal",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc537deb0fc02439",
            "id": "nat-05d777281933f2620",
            "network_interface_id": "eni-07bca9e42f9b85203",
            "private_ip": "172.37.0.92",
            "public_ip": "34.198.238.10",
            "subnet_id": "subnet-09207e20f5dcc6d4d"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natgw",
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049b1242ccd01d376",
            "id": "nat-0e7adee78fc5d2ed0",
            "network_interface_id": "eni-02a69c800dfcfa80c",
            "private_ip": "172.37.1.153",
            "public_ip": "3.92.170.168",
            "subnet_id": "subnet-0ad5e429e0866b626"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natgw",
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05cd4a7bbb9d1b820",
            "owner_id": "554075240710",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04dab6eae1681c1fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c0db39d549534c90",
            "owner_id": "554075240710",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04dab6eae1681c1fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07b08fabad8066e98",
            "owner_id": "554075240710",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-05d777281933f2620",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natgw",
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_nat_gateway.devinternal",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e8826036a3efd680",
            "owner_id": "554075240710",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e7adee78fc5d2ed0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natgw",
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_nat_gateway.devinternal",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a16894e509cb672",
            "route_table_id": "rtb-07b08fabad8066e98",
            "subnet_id": "subnet-016e8f9296c5e35fe"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natgw",
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_nat_gateway.devinternal",
            "module.myvpc.aws_route_table.nat_table",
            "module.myvpc.aws_subnet.privatesubnet",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0168b5f797316344e",
            "route_table_id": "rtb-0e8826036a3efd680",
            "subnet_id": "subnet-0bdb1b2dae7b5d0c1"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natgw",
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_nat_gateway.devinternal",
            "module.myvpc.aws_route_table.nat_table",
            "module.myvpc.aws_subnet.privatesubnet",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0977446744ae62580",
            "route_table_id": "rtb-05cd4a7bbb9d1b820",
            "subnet_id": "subnet-09207e20f5dcc6d4d"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_route_table.igw_table",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfda42ecf8328cc8",
            "route_table_id": "rtb-0c0db39d549534c90",
            "subnet_id": "subnet-0ad5e429e0866b626"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.devgateway",
            "module.myvpc.aws_route_table.igw_table",
            "module.myvpc.aws_subnet.publicsubnet",
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:554075240710:security-group/sg-047c3257e69c90ae4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047c3257e69c90ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main-dev",
            "name_prefix": null,
            "owner_id": "554075240710",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:554075240710:subnet/subnet-016e8f9296c5e35fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.37.2.0/24",
            "id": "subnet-016e8f9296c5e35fe",
            "map_public_ip_on_launch": false,
            "owner_id": "554075240710",
            "tags": {
              "Name": "privatesubnet-2"
            },
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:554075240710:subnet/subnet-0bdb1b2dae7b5d0c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.37.3.0/24",
            "id": "subnet-0bdb1b2dae7b5d0c1",
            "map_public_ip_on_launch": false,
            "owner_id": "554075240710",
            "tags": {
              "Name": "privatesubnet-3"
            },
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:554075240710:subnet/subnet-09207e20f5dcc6d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.37.0.0/24",
            "id": "subnet-09207e20f5dcc6d4d",
            "map_public_ip_on_launch": true,
            "owner_id": "554075240710",
            "tags": {
              "Name": "publicsubnet-0"
            },
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:554075240710:subnet/subnet-0ad5e429e0866b626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.37.1.0/24",
            "id": "subnet-0ad5e429e0866b626",
            "map_public_ip_on_launch": true,
            "owner_id": "554075240710",
            "tags": {
              "Name": "publicsubnet-1"
            },
            "vpc_id": "vpc-065a94f89c12d5e5b"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.devvpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:554075240710:vpc/vpc-065a94f89c12d5e5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.37.0.0/16",
            "default_network_acl_id": "acl-037774567b50f4767",
            "default_route_table_id": "rtb-03aee9ce6f2ef8c55",
            "default_security_group_id": "sg-0d357a64632d1c4bb",
            "dhcp_options_id": "dopt-0c528f76",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-065a94f89c12d5e5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03aee9ce6f2ef8c55",
            "owner_id": "554075240710",
            "tags": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}